--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -1,20 +1,31 @@
 name: Plugin - Deploy to AKS
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       NAMESPACE:
-        description: "Kubernetes namespace"
         required: true
-        default: "staging"
+        type: string
       IMAGE_TAG:
-        description: "Docker image tag to deploy"
         required: true
-        default: "latest"
+        type: string
       STAGING:
-        description: "Deploy as staging (ClusterIP) instead of LoadBalancer"
         required: false
+        type: boolean
         default: false
+    secrets:
+      AZURE_CREDENTIALS:
+        required: true
+      ACR_USERNAME:
+        required: true
+      ACR_PASSWORD:
+        required: true
+      ACR_LOGIN_SERVER:
+        required: true
+      EMAIL_USER:
+        required: true
+      EMAIL_PASSWORD:
+        required: true
 
 env:
   RESOURCE_GROUP: sit722devopsteddy-rg
@@ -27,7 +38,7 @@ jobs:
       ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Azure Login
@@ -39,7 +50,7 @@ jobs:
         run: az aks get-credentials --resource-group $RESOURCE_GROUP --name $AKS_NAME
 
       - name: Create Namespace
-        run: kubectl create namespace ${{ github.event.inputs.NAMESPACE }} || echo "Namespace exists"
+        run: kubectl create namespace ${{ inputs.NAMESPACE }} || echo "Namespace exists"
 
       - name: Deploy Backend Services
         run: |
@@ -47,62 +58,76 @@ jobs:
             K8S_NAME=$(echo $service | sed 's/_/-/g')
             TARGET_PORT=8000
             TYPE=LoadBalancer
-            if [ "${{ github.event.inputs.STAGING }}" = "true" ]; then TYPE=ClusterIP; fi
+            if [ "${{ inputs.STAGING }}" = "true" ]; then TYPE=ClusterIP; fi
 
-            # Create or update deployment
             kubectl create deployment $K8S_NAME \
-              --image=$ACR_LOGIN_SERVER/$service:${{ github.event.inputs.IMAGE_TAG }} \
-              -n ${{ github.event.inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+              --image=$ACR_LOGIN_SERVER/$service:${{ inputs.IMAGE_TAG }} \
+              -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
 
-            # Expose deployment
             kubectl expose deployment $K8S_NAME \
               --type=$TYPE \
               --port=80 \
               --target-port=$TARGET_PORT \
               --name=$K8S_NAME \
-              -n ${{ github.event.inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+              -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
 
-            kubectl label deployment $K8S_NAME app=$K8S_NAME -n ${{ github.event.inputs.NAMESPACE }} --overwrite
-            kubectl set image deployment/$K8S_NAME *=$ACR_LOGIN_SERVER/$service:${{ github.event.inputs.IMAGE_TAG }} -n ${{ github.event.inputs.NAMESPACE }}
+            kubectl label deployment $K8S_NAME app=$K8S_NAME -n ${{ inputs.NAMESPACE }} --overwrite
+            kubectl set image deployment/$K8S_NAME *=$ACR_LOGIN_SERVER/$service:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
           done
 
       - name: Wait for Backend Deployments
         run: |
-          for dep in $(kubectl get deployments -n ${{ github.event.inputs.NAMESPACE }} -o jsonpath='{.items[*].metadata.name}'); do
-            kubectl rollout status deployment/$dep -n ${{ github.event.inputs.NAMESPACE }} --timeout=300s
-            kubectl wait --for=condition=Ready pod -l app=$dep -n ${{ github.event.inputs.NAMESPACE }} --timeout=180s
+          for dep in $(kubectl get deployments -n ${{ inputs.NAMESPACE }} -o jsonpath='{.items[*].metadata.name}'); do
+            kubectl rollout status deployment/$dep -n ${{ inputs.NAMESPACE }} --timeout=300s
+            kubectl wait --for=condition=Ready pod -l app=$dep -n ${{ inputs.NAMESPACE }} --timeout=180s
           done
 
       - name: Deploy Frontend
         run: |
-          docker build -t $ACR_LOGIN_SERVER/frontend:${{ github.event.inputs.IMAGE_TAG }} frontend/
+          docker build -t $ACR_LOGIN_SERVER/frontend:${{ inputs.IMAGE_TAG }} frontend/
           echo ${{ secrets.ACR_PASSWORD }} | docker login $ACR_LOGIN_SERVER -u ${{ secrets.ACR_USERNAME }} --password-stdin
-          docker push $ACR_LOGIN_SERVER/frontend:${{ github.event.inputs.IMAGE_TAG }}
+          docker push $ACR_LOGIN_SERVER/frontend:${{ inputs.IMAGE_TAG }}
 
           TYPE=LoadBalancer
-          if [ "${{ github.event.inputs.STAGING }}" = "true" ]; then TYPE=ClusterIP; fi
+          if [ "${{ inputs.STAGING }}" = "true" ]; then TYPE=ClusterIP; fi
 
           kubectl create deployment frontend \
-            --image=$ACR_LOGIN_SERVER/frontend:${{ github.event.inputs.IMAGE_TAG }} \
-            -n ${{ github.event.inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+            --image=$ACR_LOGIN_SERVER/frontend:${{ inputs.IMAGE_TAG }} \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
 
           kubectl expose deployment frontend \
             --port=80 \
             --target-port=80 \
             --type=$TYPE \
             --name=frontend \
-            -n ${{ github.event.inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
 
-          kubectl label deployment frontend app=frontend -n ${{ github.event.inputs.NAMESPACE }} --overwrite
-          kubectl set image deployment/frontend *=$ACR_LOGIN_SERVER/frontend:${{ github.event.inputs.IMAGE_TAG }} -n ${{ github.event.inputs.NAMESPACE }}
+          kubectl label deployment frontend app=frontend -n ${{ inputs.NAMESPACE }} --overwrite
+          kubectl set image deployment/frontend *=$ACR_LOGIN_SERVER/frontend:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
 
       - name: Wait for Frontend Deployment
-        run: kubectl rollout status deployment/frontend -n ${{ github.event.inputs.NAMESPACE }} --timeout=300s
+        run: kubectl rollout status deployment/frontend -n ${{ inputs.NAMESPACE }} --timeout=300s
+
+      - name: Log Service External IPs
+        run: |
+          echo "🌐 Checking service IPs in namespace ${{ inputs.NAMESPACE }}..."
+          for svc in frontend order-service product-service; do
+            TYPE=$(kubectl get svc $svc -n ${{ inputs.NAMESPACE }} -o jsonpath='{.spec.type}')
+            if [ "$TYPE" = "LoadBalancer" ]; then
+              EXTERNAL_IP=""
+              while [ -z "$EXTERNAL_IP" ]; do
+                EXTERNAL_IP=$(kubectl get svc $svc -n ${{ inputs.NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+                [ -z "$EXTERNAL_IP" ] && echo "Waiting for $svc external IP..." && sleep 5
+              done
+              echo "✅ $svc LoadBalancer IP: $EXTERNAL_IP"
+            else
+              echo "ℹ️ $svc is ClusterIP only"
+            fi
+          done
 
   post-deploy-integration-tests:
     needs: deploy
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -127,19 +152,17 @@ jobs:
 
       - name: Run API Integration Tests
         run: |
-          echo "🔗 Setting up dynamic port forwarding for integration tests..."
-
+          echo "🔗 Setting up dynamic port forwarding..."
           SERVICES=("product-service" "order-service" "frontend")
           START_PORT=18000
           declare -A PORT_MAPPING
 
           for service in "${SERVICES[@]}"; do
-            SERVICE_PORT=$(kubectl get svc $service -n ${{ github.event.inputs.NAMESPACE }} -o jsonpath='{.spec.ports[0].port}')
+            SERVICE_PORT=$(kubectl get svc $service -n ${{ inputs.NAMESPACE }} -o jsonpath='{.spec.ports[0].port}')
             LOCAL_PORT=$START_PORT
             START_PORT=$((START_PORT + 1))
-
             echo "🚀 Forwarding $service: localhost:$LOCAL_PORT -> service port $SERVICE_PORT"
-            kubectl port-forward svc/$service $LOCAL_PORT:$SERVICE_PORT -n ${{ github.event.inputs.NAMESPACE }} &
+            kubectl port-forward svc/$service $LOCAL_PORT:$SERVICE_PORT -n ${{ inputs.NAMESPACE }} &
             PORT_MAPPING[$service]=$LOCAL_PORT
           done
 
@@ -170,9 +193,9 @@ jobs:
           echo "🧹 Cleaning up port-forwards..."
           pkill -f "kubectl port-forward" || true
 
-          if [ "${{ github.event.inputs.STAGING }}" = "true" ]; then
+          if [ "${{ inputs.STAGING }}" = "true" ]; then
             echo "🗑️ Deleting namespace..."
-            kubectl delete namespace ${{ github.event.inputs.NAMESPACE }} || echo "Namespace already deleted"
+            kubectl delete namespace ${{ inputs.NAMESPACE }} || echo "Namespace already deleted"
 
   notify-email:
     needs: post-deploy-integration-tests
@@ -181,9 +204,9 @@ jobs:
       email_to: "teddyhinyp@gmail.com"
       email_subject: ${{ needs.deploy.result == 'success' && 'Deployment Succeeded' || 'Deployment Failed' }}
       email_body: |
-        Deployment to namespace ${{ github.event.inputs.NAMESPACE }} has completed.
+        Deployment to namespace ${{ inputs.NAMESPACE }} has completed.
         Status: ${{ needs.deploy.result }}
-        Image Tag: ${{ github.event.inputs.IMAGE_TAG }}
+        Image Tag: ${{ inputs.IMAGE_TAG }}
         Run URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
     secrets:
       EMAIL_USER: ${{ secrets.EMAIL_USER }}
