--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -152,57 +152,43 @@ jobs:
 
       - name: Run API Integration Tests (Debug)
         run: |
-          echo "🔗 Setting up dynamic port forwarding with debug info..."
-          SERVICES=("product-service" "order-service" "frontend")
-          START_PORT=18000
-          declare -A PORT_MAPPING
+          echo "🔗 Setting up port forwarding for integration tests..."
 
-          for service in "${SERVICES[@]}"; do
-            echo "📝 Debug: Checking service '$service' in namespace ${{ inputs.NAMESPACE }}"
+          # Map of services and local ports
+          declare -A SERVICES_PORTS=( ["product-service"]=18000 ["order-service"]=18001 ["frontend"]=18002 )
+          NAMESPACE="${{ inputs.NAMESPACE }}"
 
-            # Get service port
-            SERVICE_PORT=$(kubectl get svc $service -n ${{ inputs.NAMESPACE }} -o jsonpath='{.spec.ports[0].port}')
-            echo "📝 Service port for $service: $SERVICE_PORT"
+          # Start port-forwards
+          for service in "${!SERVICES_PORTS[@]}"; do
+            LOCAL_PORT=${SERVICES_PORTS[$service]}
+            echo "🚀 Forwarding $service: localhost:$LOCAL_PORT -> service port 80"
 
-            # Get pods for this service
-            PODS=$(kubectl get pods -n ${{ inputs.NAMESPACE }} -l app=$service -o jsonpath='{.items[*].metadata.name}')
-            echo "📝 Pods for $service: $PODS"
-
-            # Check container ports
-            for pod in $PODS; do
-              CONTAINER_PORTS=$(kubectl get pod $pod -n ${{ inputs.NAMESPACE }} -o jsonpath='{.spec.containers[*].ports[*].containerPort}')
-              echo "📝 Pod $pod container ports: $CONTAINER_PORTS"
-            done
-
-            # Decide local port
-            LOCAL_PORT=$START_PORT
-            START_PORT=$((START_PORT + 1))
-            echo "🚀 Forwarding $service: localhost:$LOCAL_PORT -> service port $SERVICE_PORT"
-
-            # Start port-forward in background
-            kubectl port-forward svc/$service $LOCAL_PORT:$SERVICE_PORT -n ${{ inputs.NAMESPACE }} &
-            PORT_MAPPING[$service]=$LOCAL_PORT
+            kubectl port-forward svc/$service $LOCAL_PORT:80 -n $NAMESPACE &
           done
 
-          # Wait for services to be healthy
-          for service in "${SERVICES[@]}"; do
-            PORT=${PORT_MAPPING[$service]}
-            echo "⏳ Waiting for $service on localhost:$PORT..."
-            for i in {1..20}; do
-              if curl -s http://localhost:$PORT/health; then
-                echo "✅ $service is responding at localhost:$PORT"
+          # Wait a few seconds to let port-forwarding establish
+          echo "⏳ Waiting for port-forward to be ready..."
+          sleep 5
+
+          # Verify services are responding
+          for service in "product-service" "order-service" "frontend"; do
+            LOCAL_PORT=${SERVICES_PORTS[$service]}
+            echo "⏳ Checking $service health at localhost:$LOCAL_PORT/health..."
+            for i in {1..10}; do
+              if curl -s http://localhost:$LOCAL_PORT/health; then
+                echo "✅ $service is responding at localhost:$LOCAL_PORT"
                 break
               else
-                echo "🕒 Waiting for $service on localhost:$PORT..."
+                echo "🕒 Waiting for $service on localhost:$LOCAL_PORT..."
                 sleep 3
               fi
             done
           done
 
           # Export environment variables for tests
-          export PRODUCT_API_IP="http://localhost:${PORT_MAPPING["product-service"]}"
-          export ORDER_API_IP="http://localhost:${PORT_MAPPING["order-service"]}"
-          export FRONTEND_URL="http://localhost:${PORT_MAPPING["frontend"]}"
+          export PRODUCT_API_IP="http://localhost:${SERVICES_PORTS["product-service"]}"
+          export ORDER_API_IP="http://localhost:${SERVICES_PORTS["order-service"]}"
+          export FRONTEND_URL="http://localhost:${SERVICES_PORTS["frontend"]}"
 
           echo "🧪 Running integration tests..."
           cd util
