--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -53,26 +53,40 @@ jobs:
 
       - name: Deploy Backend Services
         run: |
-          for service in order_service product_service; do
-            K8S_NAME=$(echo $service | sed 's/_/-/g')
-            TARGET_PORT=8000
-            TYPE=LoadBalancer
-            if [ "${{ inputs.STAGING }}" = "true" ]; then TYPE=ClusterIP; fi
+          # Deploy Product Service
+          SERVICE_PORT=8000
+          TYPE=LoadBalancer
+          if [ "${{ inputs.STAGING }}" = "true" ]; then TYPE=ClusterIP; fi
 
-            kubectl create deployment $K8S_NAME \
-              --image=$ACR_LOGIN_SERVER/$service:${{ inputs.IMAGE_TAG }} \
-              -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create deployment product-service \
+            --image=$ACR_LOGIN_SERVER/product_service:${{ inputs.IMAGE_TAG }} \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
 
-            kubectl expose deployment $K8S_NAME \
-              --type=$TYPE \
-              --port=80 \
-              --target-port=$TARGET_PORT \
-              --name=$K8S_NAME \
-              -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+          kubectl expose deployment product-service \
+            --type=$TYPE \
+            --port=$SERVICE_PORT \
+            --target-port=8000 \
+            --name=product-service \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
 
-            kubectl label deployment $K8S_NAME app=$K8S_NAME -n ${{ inputs.NAMESPACE }} --overwrite
-            kubectl set image deployment/$K8S_NAME *=$ACR_LOGIN_SERVER/$service:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
-          done
+          kubectl label deployment product-service app=product-service -n ${{ inputs.NAMESPACE }} --overwrite
+          kubectl set image deployment/product-service *=$ACR_LOGIN_SERVER/product_service:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
+
+          # Deploy Order Service  
+          SERVICE_PORT=8001
+          kubectl create deployment order-service \
+            --image=$ACR_LOGIN_SERVER/order_service:${{ inputs.IMAGE_TAG }} \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
+          kubectl expose deployment order-service \
+            --type=$TYPE \
+            --port=$SERVICE_PORT \
+            --target-port=8000 \
+            --name=order-service \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
+          kubectl label deployment order-service app=order-service -n ${{ inputs.NAMESPACE }} --overwrite
+          kubectl set image deployment/order-service *=$ACR_LOGIN_SERVER/order_service:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
 
       - name: Wait for Backend Deployments
         run: |
@@ -153,37 +167,110 @@ jobs:
         run: |
           NAMESPACE="${{ inputs.NAMESPACE }}"
           for svc in product-service order-service frontend; do
-            POD=$(kubectl get pods -n $NAMESPACE -l app=$(echo $svc | sed 's/_/-/g') -o jsonpath='{.items[0].metadata.name}')
-            echo "⏳ Waiting for pod $POD to be ready..."
-            kubectl wait --for=condition=Ready pod/$POD -n $NAMESPACE --timeout=180s
+            echo "🔍 Checking pods for service: $svc"
+            kubectl get pods -n $NAMESPACE -l app=$svc
+            POD=$(kubectl get pods -n $NAMESPACE -l app=$svc -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || echo "")
+            if [ -n "$POD" ]; then
+              echo "⏳ Waiting for pod $POD to be ready..."
+              kubectl wait --for=condition=Ready pod/$POD -n $NAMESPACE --timeout=180s
+            else
+              echo "❌ No pods found for service $svc"
+              kubectl get pods -n $NAMESPACE
+            fi
           done
 
-      - name: Setup Port Forwarding
+      - name: Debug Pod and Service Status
         run: |
           NAMESPACE="${{ inputs.NAMESPACE }}"
-          kubectl port-forward svc/product-service 18000:80 -n $NAMESPACE &
-          kubectl port-forward svc/order-service 18001:80 -n $NAMESPACE &
-          kubectl port-forward svc/frontend 18002:80 -n $NAMESPACE &
-          echo "⏳ Waiting 5 seconds for port-forward to establish..."
-          sleep 5
+          echo "🔍 Debugging services and pods..."
+          kubectl get svc -n $NAMESPACE
+          kubectl get pods -n $NAMESPACE -o wide
+          kubectl get endpoints -n $NAMESPACE
 
-      - name: Export Service URLs
+      - name: Setup Port Forwarding with Better Error Handling
+        run: |
+          NAMESPACE="${{ inputs.NAMESPACE }}"
+
+          # Function to setup port forward with retry
+          setup_port_forward() {
+            local service=$1
+            local local_port=$2
+            local service_port=$3
+            
+            echo "🚀 Setting up port forward for $service: localhost:$local_port -> service:$service_port"
+            
+            # Kill any existing port forwards on this port
+            pkill -f "port-forward.*:$local_port" || true
+            
+            # Start port forwarding in background
+            kubectl port-forward svc/$service $local_port:$service_port -n $NAMESPACE &
+            PID=$!
+            
+            # Wait and test connection
+            sleep 3
+            if kill -0 $PID 2>/dev/null; then
+              echo "✅ Port forward for $service established (PID: $PID)"
+            else
+              echo "❌ Port forward for $service failed"
+              return 1
+            fi
+          }
+
+          # Setup port forwards with correct service ports
+          setup_port_forward "product-service" "18000" "8000"
+          setup_port_forward "order-service" "18001" "8001" 
+          setup_port_forward "frontend" "18002" "80"
+
+          echo "⏳ Waiting 10 seconds for port forwards to stabilize..."
+          sleep 10
+
+      - name: Test Service Connectivity
+        run: |
+          echo "🧪 Testing service connectivity..."
+
+          test_endpoint() {
+            local name=$1
+            local url=$2
+            local expected_status=${3:-200}
+            
+            echo "Testing $name at $url"
+            for i in {1..10}; do
+              if curl -f -s --max-time 5 "$url" >/dev/null 2>&1; then
+                echo "✅ $name is responding"
+                return 0
+              else
+                echo "⏳ Attempt $i/10: $name not ready, retrying in 2s..."
+                sleep 2
+              fi
+            done
+            echo "❌ $name failed to respond after 10 attempts"
+            return 1
+          }
+
+          # Test each service
+          test_endpoint "Product Service Health" "http://localhost:18000/health"
+          test_endpoint "Order Service Health" "http://localhost:18001/health" 
+          test_endpoint "Frontend" "http://localhost:18002/" 200
+
+      - name: Export Service URLs and Run Tests
         run: |
           export PRODUCT_API_IP="http://localhost:18000"
           export ORDER_API_IP="http://localhost:18001"
           export FRONTEND_URL="http://localhost:18002"
-          echo "🔗 Services ready:"
+
+          echo "🔗 Final service URLs:"
           echo "Product API: $PRODUCT_API_IP"
-          echo "Order API: $ORDER_API_IP"
+          echo "Order API: $ORDER_API_IP" 
           echo "Frontend: $FRONTEND_URL"
 
-      - name: Run API Integration Tests
-        run: |
           cd util
-          npm test --testTimeout=30000 || true
+          npm test --testTimeout=30000
 
-      - name: Debug: List Active Port-Forwards
-        run: ps aux | grep "kubectl port-forward"
+      - name: Cleanup Port Forwards
+        if: always()
+        run: |
+          echo "🧹 Cleaning up port forwards..."
+          pkill -f "kubectl port-forward" || true
 
   notify-email:
     needs: post-deploy-integration-tests
